Change vk.com link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="https://github.com/tmrrwnxtsn" target="_blank" class="greetings__social-icon">
                         <i class="uil uil-github-alt"></i>
                     </a>
-                    <a href="https://vk.com/tmrrwnxtsn" target="_blank" class="greetings__social-icon">
+                    <a href="https://vk.me/tmrrwnxtsn" target="_blank" class="greetings__social-icon">
                         <i class="uil uil-vk-alt"></i>
                     </a>
                 </div>
