Implement the contact page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="nav__link">Павел Курмыза | Backend-разработчик</a>
         <ul class="navbar__nav">
             <li>
-                <a href="index.html" class="nav__link">Главная</a>
+                <a href="index.html" class="nav__link active">Главная</a>
             </li>
             <li>
                 <a href="#" class="nav__link">Проекты</a>
@@ -22,7 +22,7 @@
                 <a href="#" class="nav__link">Обо мне</a>
             </li>
             <li>
-                <a href="#" class="nav__link nav__contact">Связаться</a>
+                <a href="contact.html" class="nav__link nav__contact">Связаться</a>
             </li>
         </ul>
     </nav>
@@ -33,8 +33,8 @@
         <!--==================== GREETINGS ====================-->
         <section class="greetings">
             <div class="greetings__data">
-                <h1 class="greetings__title">Меня зовут Павел, и я backend-разработчик</h1>
-                <p class="greetings__description">
+                <h1 class="title">Меня зовут Павел, и я backend-разработчик</h1>
+                <p class="text">
                     Начинающий 🙂 Разрабатываю микросервисы, чат-ботов, парсеры сайтов, активно развиваюсь в области
                     web-разработки и быстро погружаюсь во всё новое.
                 </p>
