Implement the projects page

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Павел Курмыза | Связаться</title>
@@ -16,7 +16,7 @@
                 <a href="index.html" class="nav__link">Главная</a>
             </li>
             <li>
-                <a href="#" class="nav__link">Проекты</a>
+                <a href="projects.html" class="nav__link">Проекты</a>
             </li>
             <li>
                 <a href="#" class="nav__link">Обо мне</a>
