--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Павел Курмыза | Backend-разработчик</title>
+    <title>Павел Курмыза | Проекты</title>
     <!--==================== CSS ====================-->
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -13,10 +13,10 @@
         <a href="index.html" class="nav__link">Павел Курмыза | Backend-разработчик</a>
         <ul class="navbar__nav">
             <li>
-                <a href="index.html" class="nav__link active">Главная</a>
+                <a href="index.html" class="nav__link">Главная</a>
             </li>
             <li>
-                <a href="projects.html" class="nav__link">Проекты</a>
+                <a href="projects.html" class="nav__link active">Проекты</a>
             </li>
             <li>
                 <a href="#" class="nav__link">Обо мне</a>
@@ -30,56 +30,9 @@
 <!--==================== MAIN ====================-->
 <main>
     <div class="container">
-        <!--==================== GREETINGS ====================-->
-        <section class="greetings">
-            <div class="greetings__data">
-                <h1 class="title">Меня зовут Павел, и я backend-разработчик</h1>
-                <p class="text">
-                    Начинающий 🙂 Разрабатываю микросервисы, чат-ботов, парсеры сайтов, активно развиваюсь в области
-                    web-разработки и быстро погружаюсь во всё новое.
-                </p>
-                <a download="" href="pdf/cv.pdf" class="button button--flex">Загрузить резюме</a>
-            </div>
-            <div class="greetings__img">
-                <svg class="greetings__circle" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
-                    <mask id="mask0" mask-type="alpha">
-                        <circle cx="60" cy="60" r="50"/>
-                    </mask>
-                    <g mask="url(#mask0)">
-                        <circle cx="60" cy="60" r="50"/>
-                        <image class="greetings__circle-img" x="10" y="10" xlink:href="img/avatar.png"/>
-                    </g>
-                </svg>
-            </div>
-        </section>
-        <!--==================== RECENT ====================-->
-        <section class="recent">
-            <div class="recent__title">
-                <h1>Недавняя активность</h1>
-                <a href="projects.html" class="recent__link">Посмотреть все</a>
-            </div>
-            <ul class="recent__cards">
-                <li class="recent__card">
-                    <h1 class="recent__card__title">Визуализация сортировки выбором</h1>
-                    <span class="recent__card__subtitle">27 Май 2021 | Алгоритмы, Java</span>
-                    <p class="recent__card__description">
-                        Подробный разбор алгоритма сортировки выбором и расширение знаний о языке программирования Java
-                        посредством написания приложения-визуализации.
-                    </p>
-                </li>
-                <li class="recent__card">
-                    <h1 class="recent__card__title">Сравнение электронных библиотек</h1>
-                    <span class="recent__card__subtitle">28 Октябрь 2020 | Парсинг, Python</span>
-                    <p class="recent__card__description">
-                        Программа, выполняющая выборку данных и статистическую
-                        обработку из электронных библиотек eLIBRARY.ru и Академии Google.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <!--==================== PINNED ====================-->
-        <section class="pinned">
-            <h1 class="pinned__title">Избранные проекты</h1>
+        <!--==================== PROJECTS ====================-->
+        <section class="projects">
+            <h1 class="title">Мои проекты</h1>
             <ul class="projects__cards">
                 <li>
                     <img src="img/ulstu-schedule.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
@@ -126,8 +79,31 @@
                     </div>
                 </li>
                 <hr/>
+                <li>
+                    <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
+                    <div>
+                        <h1 class="project__card__title">Криптовалюты в современной экономике</h1>
+                        <div class="project__card__subtitle">
+                            <div class="project__card__year">2021</div>
+                            <div class="project__card__tag">Веб-сайты</div>
+                        </div>
+                        <p>
+                            Веб-сайт, олицетворяющий собой краткий экскурс в крипомир, содержащий в себе ответы на
+                            популярные ответы и, конечно, конвертер криптовалют!
+                        </p>
+                    </div>
+                </li>
+                <hr/>
             </ul>
         </section>
+        <ul class="page">
+            <li class="page__numbers active">1</li>
+            <li class="page__numbers">2</li>
+            <li class="page__numbers">3</li>
+            <li class="page__dots">...</li>
+            <li class="page__numbers"> 10</li>
+        </ul>
+    </div>
     </div>
 </main>
 <!--==================== FOOTER ====================-->
