Implement the about page and reformat code

--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
     <nav class="navbar">
         <a href="index.html" class="nav__link">Павел Курмыза | Backend-разработчик</a>
         <ul class="navbar__nav">
-            <li>
-                <a href="index.html" class="nav__link active">Главная</a>
-            </li>
-            <li>
-                <a href="projects.html" class="nav__link">Проекты</a>
-            </li>
-            <li>
-                <a href="#" class="nav__link">Обо мне</a>
-            </li>
-            <li>
-                <a href="contact.html" class="nav__link nav__contact">Связаться</a>
-            </li>
+            <li><a href="index.html" class="nav__link active">Главная</a></li>
+            <li><a href="projects.html" class="nav__link">Проекты</a></li>
+            <li><a href="about.html" class="nav__link">Обо мне</a></li>
+            <li><a href="contact.html" class="nav__link nav__contact">Связаться</a></li>
         </ul>
     </nav>
 </header>
@@ -61,7 +53,7 @@
             <ul class="recent__cards">
                 <li class="recent__card">
                     <h1 class="recent__card__title">Визуализация сортировки выбором</h1>
-                    <span class="recent__card__subtitle">27 Май 2021 | Алгоритмы, Java</span>
+                    <span>27 Май 2021 | Алгоритмы, Java</span>
                     <p class="recent__card__description">
                         Подробный разбор алгоритма сортировки выбором и расширение знаний о языке программирования Java
                         посредством написания приложения-визуализации.
@@ -69,7 +61,7 @@
                 </li>
                 <li class="recent__card">
                     <h1 class="recent__card__title">Сравнение электронных библиотек</h1>
-                    <span class="recent__card__subtitle">28 Октябрь 2020 | Парсинг, Python</span>
+                    <span>28 Октябрь 2020 | Парсинг, Python</span>
                     <p class="recent__card__description">
                         Программа, выполняющая выборку данных и статистическую
                         обработку из электронных библиотек eLIBRARY.ru и Академии Google.
@@ -82,7 +74,7 @@
             <h1 class="pinned__title">Избранные проекты</h1>
             <ul class="projects__cards">
                 <li>
-                    <img src="img/ulstu-schedule.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
+                    <img src="img/schedule-bots.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Комплекс получения расписания УлГТУ</h1>
                         <div class="project__card__subtitle">
@@ -105,7 +97,7 @@
                             <div class="project__card__tag">Веб-сайты</div>
                         </div>
                         <p>
-                            Веб-сайт, олицетворяющий собой краткий экскурс в крипомир, содержащий в себе ответы на
+                            Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
                     </div>
