--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,10 @@
     <nav class="navbar">
         <a href="index.html" class="nav__link">Павел Курмыза | Backend-разработчик</a>
         <ul class="navbar__nav">
-            <li>
-                <a href="index.html" class="nav__link">Главная</a>
-            </li>
-            <li>
-                <a href="projects.html" class="nav__link">Проекты</a>
-            </li>
-            <li>
-                <a href="#" class="nav__link">Обо мне</a>
-            </li>
-            <li>
-                <a href="contact.html" class="nav__link nav__contact active">Связаться</a>
-            </li>
+            <li><a href="index.html" class="nav__link">Главная</a></li>
+            <li><a href="projects.html" class="nav__link">Проекты</a></li>
+            <li><a href="about.html" class="nav__link">Обо мне</a></li>
+            <li><a href="contact.html" class="nav__link nav__contact active">Связаться</a></li>
         </ul>
     </nav>
 </header>
