--- a/projects.html
+++ b/projects.html
@@ -12,18 +12,10 @@
     <nav class="navbar">
         <a href="index.html" class="nav__link">Павел Курмыза | Backend-разработчик</a>
         <ul class="navbar__nav">
-            <li>
-                <a href="index.html" class="nav__link">Главная</a>
-            </li>
-            <li>
-                <a href="projects.html" class="nav__link active">Проекты</a>
-            </li>
-            <li>
-                <a href="#" class="nav__link">Обо мне</a>
-            </li>
-            <li>
-                <a href="contact.html" class="nav__link nav__contact">Связаться</a>
-            </li>
+            <li><a href="index.html" class="nav__link">Главная</a></li>
+            <li><a href="projects.html" class="nav__link active">Проекты</a></li>
+            <li><a href="about.html" class="nav__link">Обо мне</a></li>
+            <li><a href="contact.html" class="nav__link nav__contact">Связаться</a></li>
         </ul>
     </nav>
 </header>
@@ -35,7 +27,7 @@
             <h1 class="title">Мои проекты</h1>
             <ul class="projects__cards">
                 <li>
-                    <img src="img/ulstu-schedule.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
+                    <img src="img/schedule-bots.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Комплекс получения расписания УлГТУ</h1>
                         <div class="project__card__subtitle">
@@ -58,7 +50,7 @@
                             <div class="project__card__tag">Веб-сайты</div>
                         </div>
                         <p>
-                            Веб-сайт, олицетворяющий собой краткий экскурс в крипомир, содержащий в себе ответы на
+                            Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
                     </div>
@@ -88,7 +80,7 @@
                             <div class="project__card__tag">Веб-сайты</div>
                         </div>
                         <p>
-                            Веб-сайт, олицетворяющий собой краткий экскурс в крипомир, содержащий в себе ответы на
+                            Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
                     </div>
@@ -103,7 +95,6 @@
             <li class="page__dots">...</li>
             <li class="page__numbers"> 10</li>
         </ul>
-    </div>
     </div>
 </main>
 <!--==================== FOOTER ====================-->
