Implement the projects-item page

--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
                     <img src="img/schedule-bots.jpg" alt="Бот с расписанием УлГТУ" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Комплекс получения расписания УлГТУ</h1>
-                        <div class="project__card__subtitle">
-                            <div class="project__card__year">2021</div>
-                            <div class="project__card__tag">Чат-боты</div>
+                        <div class="project__subtitle">
+                            <div class="project__year">2021</div>
+                            <div class="project__tag">Чат-боты</div>
                         </div>
                         <p>
                             Чат-боты, отправляющие расписание занятий УлГТУ и КЭИ им. А.Н. Афанасьева и интегрированные
@@ -45,9 +45,9 @@
                     <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Криптовалюты в современной экономике</h1>
-                        <div class="project__card__subtitle">
-                            <div class="project__card__year">2021</div>
-                            <div class="project__card__tag">Веб-сайты</div>
+                        <div class="project__subtitle">
+                            <div class="project__year">2021</div>
+                            <div class="project__tag">Веб-сайты</div>
                         </div>
                         <p>
                             Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
@@ -60,9 +60,9 @@
                     <img src="img/parser.jpg" alt="Парсер электронных библиотек" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Сравнение электронных библиотек</h1>
-                        <div class="project__card__subtitle">
-                            <div class="project__card__year">2020</div>
-                            <div class="project__card__tag">Парсеры</div>
+                        <div class="project__subtitle">
+                            <div class="project__year">2020</div>
+                            <div class="project__tag">Парсеры</div>
                         </div>
                         <p>
                             Программа, выполняющая выборку данных и статистическую обработку из электронных библиотек
@@ -75,9 +75,9 @@
                     <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
                     <div>
                         <h1 class="project__card__title">Криптовалюты в современной экономике</h1>
-                        <div class="project__card__subtitle">
-                            <div class="project__card__year">2021</div>
-                            <div class="project__card__tag">Веб-сайты</div>
+                        <div class="project__subtitle">
+                            <div class="project__year">2021</div>
+                            <div class="project__tag">Веб-сайты</div>
                         </div>
                         <p>
                             Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
