Implement links to the project item

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         Подробный разбор алгоритма сортировки выбором и расширение знаний о языке программирования Java
                         посредством написания приложения-визуализации.
                     </p>
+                    <a href="projects-item.html" class="detailed__link">Подробнее</a>
                 </li>
                 <li class="recent__card">
                     <h1 class="recent__card__title">Сравнение электронных библиотек</h1>
@@ -66,6 +67,7 @@
                         Программа, выполняющая выборку данных и статистическую
                         обработку из электронных библиотек eLIBRARY.ru и Академии Google.
                     </p>
+                    <a href="projects-item.html" class="detailed__link">Подробнее</a>
                 </li>
             </ul>
         </section>
@@ -81,10 +83,11 @@
                             <div class="project__year">2021</div>
                             <div class="project__tag">Чат-боты</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Чат-боты, отправляющие расписание занятий УлГТУ и КЭИ им. А.Н. Афанасьева и интегрированные
                             во «ВКонтакте» и Telegram.
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
@@ -96,10 +99,11 @@
                             <div class="project__year">2021</div>
                             <div class="project__tag">Веб-сайты</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
@@ -111,10 +115,11 @@
                             <div class="project__year">2020</div>
                             <div class="project__tag">Парсеры</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Программа, выполняющая выборку данных и статистическую обработку из электронных библиотек
                             eLIBRARY.ru и Академии Google.
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
