--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,11 @@
                             <div class="project__year">2021</div>
                             <div class="project__tag">Чат-боты</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Чат-боты, отправляющие расписание занятий УлГТУ и КЭИ им. А.Н. Афанасьева и интегрированные
                             во «ВКонтакте» и Telegram.
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
@@ -49,10 +50,11 @@
                             <div class="project__year">2021</div>
                             <div class="project__tag">Веб-сайты</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
@@ -64,10 +66,11 @@
                             <div class="project__year">2020</div>
                             <div class="project__tag">Парсеры</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Программа, выполняющая выборку данных и статистическую обработку из электронных библиотек
                             eLIBRARY.ru и Академии Google.
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
@@ -79,10 +82,11 @@
                             <div class="project__year">2021</div>
                             <div class="project__tag">Веб-сайты</div>
                         </div>
-                        <p>
+                        <p class="project__description">
                             Веб-сайт, олицетворяющий собой краткий экскурс в криптомир, содержащий в себе ответы на
                             популярные ответы и, конечно, конвертер криптовалют!
                         </p>
+                        <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
                 <hr/>
