--- a/about.html
+++ b/about.html
@@ -57,15 +57,15 @@
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Postgres</td>
-                    <td>7</td>
-                    <td>5</td>
+                    <td>Python</td>
+                    <td>19</td>
+                    <td>10</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Java</td>
-                    <td>19</td>
-                    <td>10</td>
+                    <td>7</td>
+                    <td>5</td>
                 </tr>
                 </tbody>
             </table>
@@ -87,7 +87,7 @@
         <section class="cooperation">
             <h1 class="cooperation__title">Открыт для сотрудничества</h1>
             <p class="text align__half">
-                Давайте общаться! Я бы хотел услышать о том, над чем вы работаете, и найти
+                Буду рад новым знакомствам и предложениям! Я бы хотел услышать о том, над чем вы работаете, и найти
                 способ работать вместе.
             </p>
             <a href="contact.html" class="button positive">Связаться со мной</a>
