--- a/contact.html
+++ b/contact.html
@@ -41,16 +41,16 @@
         <form>
             <div class="form-group">
                 <label for="inputName">Ваше имя</label>
-                <input type="text" class="form-control" id="inputName">
+                <input type="text" class="form-control" id="inputName" name="inputName">
             </div>
             <div class="form-group">
                 <label for="inputEmail">Ваш email</label>
-                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" name="inputEmail">
                 <small id="emailHelp" class="form-text text-muted">Email не будет передан третьим лицам</small>
             </div>
             <div class="form-group">
-                <label for="formControlTextarea">Сообщение</label>
-                <textarea class="form-control" id="formControlTextarea" rows="3"></textarea>
+                <label for="inputMessage">Сообщение</label>
+                <textarea class="form-control" id="inputMessage" rows="3" name="inputMessage"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Отправить</button>
         </form>
