Add a separate list item to separate project cards

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
                 <li>
                     <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
                     <div>
@@ -106,7 +106,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
                 <li>
                     <img src="img/parser.jpg" alt="Парсер электронных библиотек" class="project__card__img"/>
                     <div>
@@ -122,7 +122,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
             </ul>
         </section>
     </div>
