--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
                 <li>
                     <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
                     <div>
@@ -57,7 +57,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
                 <li>
                     <img src="img/parser.jpg" alt="Парсер электронных библиотек" class="project__card__img"/>
                     <div>
@@ -73,7 +73,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
                 <li>
                     <img src="img/crypto-site.jpg" alt="Сайт про криптовалюты" class="project__card__img"/>
                     <div>
@@ -89,7 +89,7 @@
                         <a href="projects-item.html" class="detailed__link">Подробнее</a>
                     </div>
                 </li>
-                <hr/>
+                <li class="separator"></li>
             </ul>
         </section>
         <ul class="page">
