Add name attribute to the input fields

--- a/contact.html
+++ b/contact.html
@@ -31,16 +31,16 @@
             <form>
                 <div class="form__input">
                     <label for="inputName">Ваше имя</label>
-                    <input type="text" id="inputName">
+                    <input type="text" id="inputName" name="inputName">
                 </div>
                 <div class="form__input">
                     <label for="inputEmail">Ваш email</label>
-                    <input type="email" id="inputEmail" aria-describedby="emailHelp">
+                    <input type="email" id="inputEmail" aria-describedby="emailHelp" name="inputEmail">
                     <small id="emailHelp">Email не будет передан третьим лицам</small>
                 </div>
                 <div class="form__input">
-                    <label for="formTextarea">Сообщение</label>
-                    <textarea id="formTextarea" rows="4"></textarea>
+                    <label for="inputMessage">Сообщение</label>
+                    <textarea id="inputMessage" rows="4" name="inputMessage"></textarea>
                 </div>
                 <a type="submit" href="#" class="button">Отправить</a>
             </form>
