Change tag a to tag button

--- a/about.html
+++ b/about.html
@@ -90,7 +90,9 @@
                 Буду рад новым знакомствам и предложениям! Я бы хотел услышать о том, над чем вы работаете, и найти
                 способ работать вместе.
             </p>
-            <a href="contact.html" class="button positive">Связаться со мной</a>
+            <form action="contact.html">
+                <button type="submit" class="positive">Связаться со мной</button>
+            </form>
         </section>
     </div>
 </main>
