--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     Начинающий 🙂 Разрабатываю микросервисы, чат-ботов, парсеры сайтов, активно развиваюсь в области
                     web-разработки и быстро погружаюсь во всё новое.
                 </p>
-                <a download="" href="pdf/cv.pdf" class="button button--flex">Загрузить резюме</a>
+                <form method="get" action="pdf/cv.pdf">
+                    <button type="submit">Загрузить резюме</button>
+                </form>
             </div>
             <div class="greetings__img">
                 <svg class="greetings__circle" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
