--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,18 @@
             <form>
                 <div class="form__input">
                     <label for="inputName">Ваше имя</label>
-                    <input type="text" id="inputName" name="inputName">
+                    <input type="text" id="inputName" name="name">
                 </div>
                 <div class="form__input">
                     <label for="inputEmail">Ваш email</label>
-                    <input type="email" id="inputEmail" aria-describedby="emailHelp" name="inputEmail">
+                    <input type="email" id="inputEmail" aria-describedby="emailHelp" name="email">
                     <small id="emailHelp">Email не будет передан третьим лицам</small>
                 </div>
                 <div class="form__input">
                     <label for="inputMessage">Сообщение</label>
-                    <textarea id="inputMessage" rows="4" name="inputMessage"></textarea>
+                    <textarea id="inputMessage" rows="4" name="message"></textarea>
                 </div>
-                <a type="submit" href="#" class="button">Отправить</a>
+                <button type="submit">Отправить</button>
             </form>
         </section>
     </div>
