Handle form filling with js

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <title>Павел Курмыза | Связаться</title>
     <!--==================== CSS ====================-->
     <link href="css/styles.css" rel="stylesheet">
+    <!--================ SWEETALERT 2 ===============-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
 </head>
 <body>
 <!--==================== HEADER ====================-->
@@ -59,5 +62,7 @@
         <div class="footer__description">Сайт разработан Курмыза Павлом ©2021</div>
     </div>
 </footer>
+<!--==================== SITE JS ====================-->
+<script src="js/site.js"></script>
 </body>
 </html>
